# warp-directory-rs

./: Cargo.toml  README.md
.github/workflows/: lint.yml
src/: lib.rs  main.rs  shell_wrapper.rs  storage.rs  util.rs
src/commands/: add_warp_directory.rs  add_warp_point.rs  delete_warp_point.rs  edit_warp_point.rs  list_warp_points.rs  mod.rs  warp_to_point.rs
