[package]
name = "warp-directory"
version = "0.1.0"
edition = "2024"
authors = ["Simon Barth <data5tream@protonmail.com>"]
license = "GPL-3.0-or-later"

[lints.clippy]
pedantic = "warn"

[dependencies]
clap = "4.5.37"
directories = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"