[package]
name = "warp-directory"
version = "0.1.0"
edition = "2024"
authors = ["Simon Barth <data5tream@protonmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/Data5tream/warp-directory-rs"
categories = ["command-line-utilities"]
description = "A simple command line tool to quickly change directories"

[lints.clippy]
pedantic = "warn"

[dependencies]
clap = "4.5.37"
directories = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"